add Gráfico Média dos Aprovados + lógicas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">DadApp</string>
 
     <string-array name="listAnos">
+        <item>Geral</item>
         <item>2014</item>
         <item>2015</item>
         <item>2016</item>
